# Mountain_Generation

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.h  Renderer.cpp  Renderer.h  main.cpp
Dependencies/SDL3/include/SDL3/: SDL_revision.h
Dependencies/SDL3/lib/pkgconfig/: sdl3.pc
Dependencies/SDL3_Image/lib/cmake/SDL3_image/: SDL3_image-shared-targets.cmake  SDL3_imageConfig.cmake
Dependencies/SDL3_Image/lib/pkgconfig/: sdl3-image.pc
